#2836 don't try to close any windows when downloading a file
I realized it's not needed anymore. Nowadays Selenide starts webdriver with settings like "download instead of opening a preview", so that browser normally doesn't open any new windows.